--- a/src/app/pages/materials-asm1/materials-asm1.component.html
+++ b/src/app/pages/materials-asm1/materials-asm1.component.html
@@ -216,7 +216,8 @@
             <td class="delete-cell">
               <button class="delete-btn" 
                       *ngIf="canDelete"
-                      title="Xóa item">
+                      (click)="deleteInventoryItem(material)"
+                      title="Xóa item này khỏi ASM1 Inventory">
                 <i class="material-icons">delete</i>
               </button>
             </td>
